@@ -44,6 +44,89 @@ allTests(const Ice::CommunicatorPtr& communicator,
     test(!base->ice_collocationOptimized(false)->ice_isCollocationOptimized());
     cout << "ok" << endl;
 
+    cout << "testing proxy comparison... " << flush;
+
+    test(communicator->stringToProxy("foo") == communicator->stringToProxy("foo"));
+    test(communicator->stringToProxy("foo") != communicator->stringToProxy("foo2"));
+    test(communicator->stringToProxy("foo") < communicator->stringToProxy("foo2"));
+    test(!(communicator->stringToProxy("foo2") < communicator->stringToProxy("foo")));
+
+    Ice::ObjectPrx compObj = communicator->stringToProxy("foo");
+
+    test(compObj->ice_facet("facet") == compObj->ice_facet("facet"));
+    test(compObj->ice_facet("facet") != compObj->ice_facet("facet1"));
+    test(compObj->ice_facet("facet") < compObj->ice_facet("facet1"));
+    test(!(compObj->ice_facet("facet") < compObj->ice_facet("facet")));
+
+    test(compObj->ice_oneway() == compObj->ice_oneway());
+    test(compObj->ice_oneway() != compObj->ice_twoway());
+    test(compObj->ice_twoway() < compObj->ice_oneway());
+    test(!(compObj->ice_oneway() < compObj->ice_twoway()));
+
+    test(compObj->ice_secure(true) == compObj->ice_secure(true));
+    test(compObj->ice_secure(false) != compObj->ice_secure(true));
+    test(compObj->ice_secure(false) < compObj->ice_secure(true));
+    test(!(compObj->ice_secure(true) < compObj->ice_secure(false)));
+
+    test(compObj->ice_collocationOptimized(true) == compObj->ice_collocationOptimized(true));
+    test(compObj->ice_collocationOptimized(false) != compObj->ice_collocationOptimized(true));
+    test(compObj->ice_collocationOptimized(false) < compObj->ice_collocationOptimized(true));
+    test(!(compObj->ice_collocationOptimized(true) < compObj->ice_collocationOptimized(false)));
+
+    test(compObj->ice_connectionCached(true) == compObj->ice_connectionCached(true));
+    test(compObj->ice_connectionCached(false) != compObj->ice_connectionCached(true));
+    test(compObj->ice_connectionCached(false) < compObj->ice_connectionCached(true));
+    test(!(compObj->ice_connectionCached(true) < compObj->ice_connectionCached(false)));
+
+    test(compObj->ice_endpointSelection(Ice::Random) == compObj->ice_endpointSelection(Ice::Random));
+    test(compObj->ice_endpointSelection(Ice::Random) != compObj->ice_endpointSelection(Ice::Ordered));
+    test(compObj->ice_endpointSelection(Ice::Random) < compObj->ice_endpointSelection(Ice::Ordered));
+    test(!(compObj->ice_endpointSelection(Ice::Ordered) < compObj->ice_endpointSelection(Ice::Random)));
+
+    test(compObj->ice_connectionId("id2") == compObj->ice_connectionId("id2"));
+    test(compObj->ice_connectionId("id1") != compObj->ice_connectionId("id2"));
+    test(compObj->ice_connectionId("id1") < compObj->ice_connectionId("id2"));
+    test(!(compObj->ice_connectionId("id2") < compObj->ice_connectionId("id1")));
+
+    test(compObj->ice_compress(true) == compObj->ice_compress(true));
+    test(compObj->ice_compress(false) != compObj->ice_compress(true));
+    test(compObj->ice_compress(false) < compObj->ice_compress(true));
+    test(!(compObj->ice_compress(true) < compObj->ice_compress(false)));
+
+    test(compObj->ice_timeout(20) == compObj->ice_timeout(20));
+    test(compObj->ice_timeout(10) != compObj->ice_timeout(20));
+    test(compObj->ice_timeout(10) < compObj->ice_timeout(20));
+    test(!(compObj->ice_timeout(20) < compObj->ice_timeout(10)));
+
+    Ice::ObjectPrx compObj1 = communicator->stringToProxy("foo:tcp -h 127.0.0.1 -p 10000");
+    Ice::ObjectPrx compObj2 = communicator->stringToProxy("foo:tcp -h 127.0.0.1 -p 10001");
+    test(compObj1 != compObj2);
+    test(compObj1 < compObj2);
+    test(!(compObj2 < compObj1));
+
+    compObj1 = communicator->stringToProxy("foo@MyAdapter1");
+    compObj2 = communicator->stringToProxy("foo@MyAdapter2");
+    test(compObj1 != compObj2);
+    test(compObj1 < compObj2);
+    test(!(compObj2 < compObj1));
+
+    test(compObj1->ice_locatorCacheTimeout(20) == compObj1->ice_locatorCacheTimeout(20));
+    test(compObj1->ice_locatorCacheTimeout(10) != compObj1->ice_locatorCacheTimeout(20));
+    test(compObj1->ice_locatorCacheTimeout(10) < compObj1->ice_locatorCacheTimeout(20));
+    test(!(compObj1->ice_locatorCacheTimeout(20) < compObj1->ice_locatorCacheTimeout(10)));
+
+    compObj1 = communicator->stringToProxy("foo:tcp -h 127.0.0.1 -p 1000");
+    compObj2 = communicator->stringToProxy("foo@MyAdapter1");
+    test(compObj1 != compObj2);
+    test(compObj1 < compObj2);
+    test(!(compObj2 < compObj1));
+
+    //
+    // TODO: Ideally we should also test comparison of fixed proxies.
+    //
+
+    cout << "ok" << endl;
+
     cout << "testing checked cast... " << flush;
     Test::MyClassPrx cl = Test::MyClassPrx::checkedCast(base);
     test(cl);
